[project]
name = "lasdi"
version = "2.0.0"
authors = [
  { name="Christophe Bonneville", email="cpb97@cornell.edu" },
  { name="Kevin (Seung Whan) Chung", email="chung28@llnl.gov" },
  { name="Youngsoo Choi", email="choi15@llnl.gov" }
]
description = "LaSDI: Parametric latent space dynamics identification"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch>=0.0.1",
  "numpy>=0.23.0",
  "scikit-learn>=0.3",
  "scipy>=0.10",
  "pyyaml>=0.0",
  "matplotlib>=1.8.0",
  "argparse>=0.1",
  "h5py"
]

[project.urls]
Homepage = "https://github.com/LLNL/GPLaSDI"
Issues = "https://github.com/LLNL/GPLaSDI/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
lasdi = "lasdi.workflow:main [config_file]"
burgers1d = "lasdi.physics.burgers1d:main [config_file]"
